PSP. Unidad 1. Repaso de comunicación entre procesos.